force-app/main/default/objects/Activity/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
            <value>
                <fullName>Mobile Chat</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Line, KakaoChat, WeChat</fullName>
                <label>Line / KakaoChat / WeChat</label>
            </value>
            <value>
                <fullName>Other Messenger and Social Media apps</fullName>
            </value>
            <value>
                <fullName>Online Appointment</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>