force-app/main/default/objects/Activity/fields/Appointment_Type_Icon__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type_Icon__c</fullName>
    <formula>CASE( AppointmentType__c ,
&quot;inStore&quot;, IMAGE(&quot;/resource/iconics/images/call.png&quot;,&quot;Call&quot;,20,20),
&quot;distant&quot;, IMAGE(&quot;/resource/iconics/images/video.png&quot;,&quot;Video&quot;,20,20),
&quot;&quot;)</formula>
    <label>Appointment_Type_Icon</label>
    <type>Text</type>
</CustomField>