force-app/main/default/objects/Activity/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <label>Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Reassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>