force-app/main/default/objects/Activity/fields/Attendance__c.field-meta.xml
<CustomField>
    <fullName>Attendance__c</fullName>
    <label>Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Oui</fullName>
                <isActive>false</isActive>
                <label>Oui</label>
            </value>
            <value>
                <fullName>あり</fullName>
                <isActive>false</isActive>
                <label>あり</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>