force-app/main/default/objects/Activity/fields/AvailabilityId__c.field-meta.xml
<CustomField>
    <fullName>AvailabilityId__c</fullName>
    <label>AvailabilityId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>