force-app/main/default/objects/Activity/fields/Average_Completion_To_Do__c.field-meta.xml
<CustomField>
    <fullName>Average_Completion_To_Do__c</fullName>
    <formula>CompletedDateTime - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion To Do</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>