force-app/main/default/objects/Activity/fields/CA_Ids__c.field-meta.xml
<CustomField>
    <fullName>CA_Ids__c</fullName>
    <label>CA Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>