force-app/main/default/objects/Activity/fields/Call_Duration_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration_in_Minutes__c</fullName>
    <formula>/*VALUE(TEXT(CallDurationInSeconds /60))
TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000*/

IF (
  NOT(ISBLANK(CallDurationInSeconds)),

  /*IF (
    CallDurationInSeconds &gt;= 3600,
    TEXT(HOUR(TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000)) + &apos;:&apos;,
    &apos;&apos;
  ) +*/

  /* Hour */
  IF (
    HOUR(TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000) &lt; 10,
    &apos;0&apos;,
    &apos;&apos;
  ) +
  TEXT(HOUR(TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000)) + &apos;:&apos; +

  /* Minute */
  IF (
    MINUTE(TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000) &lt; 10,
    &apos;0&apos;,
    &apos;&apos;
  ) +
  TEXT(MINUTE(TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000)) + &apos;:&apos; +

  /* Second*/
  IF (
    SECOND(TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000) &lt; 10,
    &apos;0&apos;,
    &apos;&apos;
  ) +
  TEXT(SECOND(TIMEVALUE(&quot;00:00:00.000&quot;) + CallDurationInSeconds*1000)),

  &apos;&apos;
)</formula>
    <label>Call Duration</label>
    <type>Text</type>
</CustomField>