force-app/main/default/objects/Activity/fields/Cancelation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Date__c</fullName>
    <label>Cancelation Date</label>
    <type>DateTime</type>
</CustomField>