force-app/main/default/objects/Activity/fields/CareServiceRepairInProgressFlag__c.field-meta.xml
<CustomField>
    <fullName>CareServiceRepairInProgressFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CareServiceRepairInProgressFlag</label>
    <type>Checkbox</type>
</CustomField>