force-app/main/default/objects/Activity/fields/Client_List__c.field-meta.xml
<CustomField>
    <fullName>Client_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client List</label>
    <referenceTo>CLI_CliList__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>