force-app/main/default/objects/Activity/fields/ClientConfirmed__c.field-meta.xml
<CustomField>
    <fullName>ClientConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Confirmed</label>
    <type>Checkbox</type>
</CustomField>