force-app/main/default/objects/Activity/fields/ClientNoShow__c.field-meta.xml
<CustomField>
    <fullName>ClientNoShow__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To know if client was present during the appointment or not</description>
    <label>Client no show</label>
    <type>Checkbox</type>
</CustomField>