force-app/main/default/objects/Activity/fields/cnx__CTIInfo__c.field-meta.xml
<CustomField>
    <fullName>cnx__CTIInfo__c</fullName>
    <description>Additional CTI Information</description>
    <label>CTI Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>