force-app/main/default/objects/Activity/fields/CTI_AfterCallDate__c.field-meta.xml
<CustomField>
    <fullName>CTI_AfterCallDate__c</fullName>
    <description>[ICONiCS] wraped up start date after a call (data from CTI connector)</description>
    <label>After Call Date</label>
    <type>DateTime</type>
</CustomField>