force-app/main/default/objects/Activity/fields/CTI_ConnectedDate__c.field-meta.xml
<CustomField>
    <fullName>CTI_ConnectedDate__c</fullName>
    <description>[ICONiCS] Call connection between the CSC advisor and the client (CTI data from CTI popup)</description>
    <label>Connected Date</label>
    <type>DateTime</type>
</CustomField>