force-app/main/default/objects/Activity/fields/CTI_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CTI_StartDate__c</fullName>
    <description>[ICONiCS] start call before answering (data from CTI connector)</description>
    <label>Call Start Date</label>
    <type>DateTime</type>
</CustomField>