force-app/main/default/objects/Activity/fields/Domaine__c.field-meta.xml
<CustomField>
    <fullName>Domaine__c</fullName>
    <label>Domaine</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>FW</fullName>
            </value>
            <value>
                <fullName>In Store</fullName>
            </value>
            <value>
                <fullName>LV Policy</fullName>
            </value>
            <value>
                <fullName>Mistake/Bugs</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
            <value>
                <fullName>MyLV</fullName>
            </value>
            <value>
                <fullName>Product on Demand</fullName>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Place</fullName>
            </value>
            <value>
                <fullName>Precision</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Procedure</fullName>
            </value>
            <value>
                <fullName>Procedure &amp; Options</fullName>
            </value>
            <value>
                <fullName>Refund Amount</fullName>
            </value>
            <value>
                <fullName>Rejected Order</fullName>
            </value>
            <value>
                <fullName>SS</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
            <value>
                <fullName>Status/Tracking</fullName>
            </value>
            <value>
                <fullName>Tax Form Missing</fullName>
            </value>
            <value>
                <fullName>Client wants a duplicate</fullName>
            </value>
            <value>
                <fullName>Client can not download the invoice in MyLV</fullName>
            </value>
            <value>
                <fullName>MyPR</fullName>
                <isActive>false</isActive>
                <label>MyPR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>