force-app/main/default/objects/Activity/fields/DREAMIDCLIENT__c.field-meta.xml
<CustomField>
    <fullName>DREAMIDCLIENT__c</fullName>
    <externalId>true</externalId>
    <label>DREAM Id Client</label>
    <length>18</length>
    <type>Text</type>
</CustomField>