force-app/main/default/objects/Activity/fields/From_ICON__c.field-meta.xml
<CustomField>
    <fullName>From_ICON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From ICON</label>
    <type>Checkbox</type>
</CustomField>