force-app/main/default/objects/Activity/fields/Genesys_Queue__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Queue__c</fullName>
    <label>Genesys Queue</label>
    <type>TextArea</type>
</CustomField>