force-app/main/default/objects/Activity/fields/ICX_Country__c.field-meta.xml
<CustomField>
    <fullName>ICX_Country__c</fullName>
    <description>[ICONiCS] Country called. ICX_CTI_Header Visualforce page updates this field (based on the country of the store object and the CountryMapping Custom Metadata Type)</description>
    <label>Country / Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>