force-app/main/default/objects/Activity/fields/InOut__c.field-meta.xml
<CustomField>
    <fullName>InOut__c</fullName>
    <label>In/Out</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>