force-app/main/default/objects/Activity/fields/isAnniversaryReminder__c.field-meta.xml
<CustomField>
    <fullName>isAnniversaryReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAnniversaryReminder</label>
    <type>Checkbox</type>
</CustomField>