force-app/main/default/objects/Activity/fields/IsBadged__c.field-meta.xml
<CustomField>
    <fullName>IsBadged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBadged</label>
    <type>Checkbox</type>
</CustomField>