force-app/main/default/objects/Activity/fields/isBirthdayReminder__c.field-meta.xml
<CustomField>
    <fullName>isBirthdayReminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBirthdayReminder</label>
    <type>Checkbox</type>
</CustomField>