force-app/main/default/objects/Activity/fields/Locale__c.field-meta.xml
<CustomField>
    <fullName>Locale__c</fullName>
    <defaultValue>&apos;eng-e1&apos;</defaultValue>
    <label>Locale</label>
    <length>6</length>
    <type>Text</type>
</CustomField>