force-app/main/default/objects/Activity/fields/Look__c.field-meta.xml
<CustomField>
    <fullName>Look__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Look</label>
    <referenceTo>Look__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>