force-app/main/default/objects/Activity/fields/LookId_IW__c.field-meta.xml
<CustomField>
    <fullName>LookId_IW__c</fullName>
    <label>LookId_IW</label>
    <length>50</length>
    <type>Text</type>
</CustomField>