force-app/main/default/objects/Activity/fields/LVM_SFDCAccountIds__c.field-meta.xml
<CustomField>
    <fullName>LVM_SFDCAccountIds__c</fullName>
    <label>LVM_SFDCAccountIds</label>
    <type>TextArea</type>
</CustomField>