force-app/main/default/objects/Activity/fields/LVM_SFDCAccounts_Identify__c.field-meta.xml
<CustomField>
    <fullName>LVM_SFDCAccounts_Identify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LVM_SFDCAccounts_Identify</label>
    <type>Checkbox</type>
</CustomField>