force-app/main/default/objects/Activity/fields/My_Repairs__c.field-meta.xml
<CustomField>
    <fullName>My_Repairs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Service</label>
    <referenceTo>CareService__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>