force-app/main/default/objects/Activity/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Information</fullName>
            </value>
            <value>
                <fullName>Service and General Information</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Events and Editorials</fullName>
            </value>
            <value>
                <fullName>Congratulations</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>MissedCall_WrongNumber</fullName>
                <label>Cut Call / Wrong Number</label>
            </value>
            <value>
                <fullName>Missed</fullName>
            </value>
            <value>
                <fullName>Commercial Campaign</fullName>
            </value>
            <value>
                <fullName>Services &amp; Repair</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Order follow up</fullName>
            </value>
            <value>
                <fullName>My Client Clienteling</fullName>
            </value>
            <value>
                <fullName>Brand Image &amp; Events</fullName>
            </value>
            <value>
                <fullName>No Response Required</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Order follow-up</fullName>
                <isActive>false</isActive>
                <label>Sales &amp; Order follow-up</label>
            </value>
            <value>
                <fullName>Service &amp; Repair</fullName>
                <isActive>false</isActive>
                <label>Service &amp; Repair</label>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
                <isActive>false</isActive>
                <label>Wrong Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>