force-app/main/default/objects/Activity/fields/No_Transaction__c.field-meta.xml
<CustomField>
    <fullName>No_Transaction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Transaction</label>
    <type>Checkbox</type>
</CustomField>