force-app/main/default/objects/Activity/fields/Owner_Zone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Zone__c</fullName>
    <description>For reporting purpose</description>
    <formula>TEXT(Owner:User.MANAGEMENT_ZONE_LEVEL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Zone</label>
    <type>Text</type>
</CustomField>