force-app/main/default/objects/Activity/fields/Participants_Number__c.field-meta.xml
<CustomField>
    <fullName>Participants_Number__c</fullName>
    <label>Participants Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>