force-app/main/default/objects/Activity/fields/Phone_Calling_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Calling_Number__c</fullName>
    <description>Phone format for Calling Number</description>
    <label>Phone Number</label>
    <type>Phone</type>
</CustomField>