force-app/main/default/objects/Activity/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>IF (
		ISPICKVAL(CallType, &apos;Inbound&apos;),
  MID( 
    cnx__CTIInfo__c , 
    FIND(&quot;:&quot;,  cnx__CTIInfo__c)+1, 
    (FIND(&quot;,&quot;,  cnx__CTIInfo__c ) - (FIND(&quot;:&quot;,  cnx__CTIInfo__c)+1))
		),
		IF (
				CONTAINS(cnx__CTIInfo__c, &quot;ANI&quot;),
		  RIGHT(cnx__CTIInfo__c, LEN(cnx__CTIInfo__c) - (FIND(&quot;DialedNumber: &quot;, cnx__CTIInfo__c) + LEN(&quot;DialedNumber:&quot;))),
				&quot;&quot;
		)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>