force-app/main/default/objects/Activity/fields/Preview_URL_IW__c.field-meta.xml
<CustomField>
    <fullName>Preview_URL_IW__c</fullName>
    <label>Preview_URL_IW</label>
    <type>Url</type>
</CustomField>