force-app/main/default/objects/Activity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <formula>Product_Sku__r.ProductGroup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>