force-app/main/default/objects/Activity/fields/Product_Sku__c.field-meta.xml
<CustomField>
    <fullName>Product_Sku__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Sku</label>
    <referenceTo>ProductCatalogue__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>