force-app/main/default/objects/Activity/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Used in online appointment form</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>product_presentation</fullName>
                <label>Product presentation</label>
            </value>
            <value>
                <fullName>special_occasion</fullName>
                <label>Special occasion</label>
            </value>
            <value>
                <fullName>return_exchange</fullName>
                <label>Return/Exchange</label>
            </value>
            <value>
                <fullName>service</fullName>
                <label>Service</label>
            </value>
            <value>
                <fullName>other</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>