force-app/main/default/objects/Activity/fields/RelatedTicketNumber__c.field-meta.xml
<CustomField>
    <fullName>RelatedTicketNumber__c</fullName>
    <description>Created by MEL to use in the trigger IC_PPurchase_TRG.ExcepPurchases
to map the Purchase Ticket with the task to avoid deleting and recreating them</description>
    <label>Related Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>