force-app/main/default/objects/Activity/fields/report_CA_store__c.field-meta.xml
<CustomField>
    <fullName>report_CA_store__c</fullName>
    <label>report_CA_store</label>
    <length>5</length>
    <type>Text</type>
</CustomField>